Fixed categories thumb column overlap with categories name

--- a/plugins/woocommerce/client/legacy/css/admin.scss
+++ b/plugins/woocommerce/client/legacy/css/admin.scss
@@ -3181,7 +3181,7 @@ ul.order_notes {
 table.wp-list-table {
 
 	.column-thumb {
-		width: 52px;
+		width: 100px;
 		text-align: center;
 		white-space: nowrap;
 	}
